--- a/package.json
+++ b/package.json
@@ -9,23 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neynar/nodejs-sdk": "^1.71.0",
     "@neynar/react": "^1.2.8",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.56.1",
+    "@types/seedrandom": "^3.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "jose": "^5.10.0",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "seedrandom": "^3.0.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
+    "supabase": "^1.226.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
